; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_xprintf_str.c___printf_arginfo_chr.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_xprintf_str.c___printf_arginfo_chr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.printf_info = type { i8, i64 }

@PA_WCHAR = common dso_local global i32 0, align 4
@PA_INT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__printf_arginfo_chr(%struct.printf_info* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.printf_info*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store %struct.printf_info* %0, %struct.printf_info** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp ugt i64 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.printf_info*, %struct.printf_info** %4, align 8
  %12 = getelementptr inbounds %struct.printf_info, %struct.printf_info* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %21, label %15

15:                                               ; preds = %3
  %16 = load %struct.printf_info*, %struct.printf_info** %4, align 8
  %17 = getelementptr inbounds %struct.printf_info, %struct.printf_info* %16, i32 0, i32 0
  %18 = load i8, i8* %17, align 8
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 67
  br i1 %20, label %21, label %25

21:                                               ; preds = %15, %3
  %22 = load i32, i32* @PA_WCHAR, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 0
  store i32 %22, i32* %24, align 4
  br label %29

25:                                               ; preds = %15
  %26 = load i32, i32* @PA_INT, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 0
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %25, %21
  ret i32 1
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
